@@ -1527,6 +1527,16 @@ SCIP_RETCODE SCIPlpiGetRows(
    QS_RETURN(rval);
 }
 
+/** gets the objective sense of the LP */
+SCIP_RETCODE SCIPlpiGetObjsen(
+   SCIP_LPI*             lpi,                /**< LP interface structure */
+   SCIP_OBJSEN*          objsen              /**< pointer to store objective sense */
+   )
+{
+   SCIPerrorMessage("SCIPlpiGetObjsen() has not been implemented yet.\n");
+   return SCIP_ERROR;
+}
+
 /** gets objective coefficients from LP problem object */
 SCIP_RETCODE SCIPlpiGetObj(
    SCIP_LPI*             lpi,                /**< LP interface structure */
